Prevent images from distorting on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -23,6 +23,7 @@ html, body {
 
 img {
   width: auto;
+  height: auto;
   max-width: 100%;
 }
 
